; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_mapping.c_DRV_USART_ReceiverBufferSizeGet.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_mapping.c_DRV_USART_ReceiverBufferSizeGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DRV_USART_ReceiverBufferSizeGet(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = and i32 %5, 255
  %7 = sext i32 %6 to i64
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  switch i64 %8, label %11 [
    i64 128, label %9
  ]

9:                                                ; preds = %1
  %10 = call i32 (...) @DRV_USART0_ReceiverBufferSizeGet()
  store i32 %10, i32* %4, align 4
  br label %12

11:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %11, %9
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local i32 @DRV_USART0_ReceiverBufferSizeGet(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
